--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
   <title>Surf & Paddle Co.</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="images/logo.png" type="image/png">
+  <link href='https://fonts.googleapis.com/css?family=Oswald|Open+Sans' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 </head>
 <body>
   <header>
-    <nav><h2>ABOUT</h2></nav>
-    <h1>Hello</h1>
+  <ul class="nav-bar">
+    <li class="icon">
+      <a href="imgages/logo.png">
+        <img src="images/logo.png"/>
+      </a>
+    <div>SURF & PADDLE CO. BLOG</div>
+   </li>
+  </ul>
+  <div class="title">
+    <h1>SURF & PADDLE CO.</h1>
+    <h4>An Ironyard Academy Project Est. Fall 2013</h4>
+  </div>
+
+
   </header>
+
 
 </body>
 </html>
