--- a/index.html
+++ b/index.html
@@ -9,15 +9,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <header>
-  <ul class="nav-bar">
-    <li class="icon">
+  <header class="tinted-image">
+  <ul class="nav-contain">
+    <li class="nav-bar">
       <a href="imgages/logo.png">
         <img src="images/logo.png"/>
       </a>
       <div>SURF & PADDLE CO. BLOG</div>
    </li>
   </ul>
+  <li class="nav-bar" id="search">
+    <div id="menu-bar">ABOUT</div>
+    <div id="menu-bar">SEARCH</div>
+    <a href="images/search.png">
+      <img src="images/search.png"/>
+    </a>
+  </li>
   <div class="title">
     <h1>SURF & PADDLE CO.</h1>
     <h4>An Ironyard Academy Project Est. Fall 2013</h4>
